--- a/views/index.html
+++ b/views/index.html
@@ -30,8 +30,16 @@
         </form>
       </section>
     </main>
-    <footer>
-      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
+    <footer >
+      <hr>
+      <p>
+        Made with love by Abdelkarim Aoulallay <br />
+        <ul>
+          <li><a href="https://github.com/karimAoulallay">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/abdelkarim-aoulallay/">Linkedin</a></li>
+          <li><a href="https://twitter.com/karim_aoulallay">X (Twitter)</a></li>
+        </ul>
+      </p>
     </footer>
   </body>
 </html>
