--- a/public/style.css
+++ b/public/style.css
@@ -1,46 +1,53 @@
+/****** Main Styling ******/
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   color: #222;
-  background-color: #fff;
+  background-color: #fafafa;
   text-align: center;
   line-height: 1.4em;
+  margin: 0;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
 }
 
-main {
+.container {
   padding: 0;
-  margin-top: 40px;
 }
 
 h3 {
   margin-top: 30px;
 }
 
+hr {
+  margin: 25px;
+}
 
+code {
+  font-family: monospace;
+  padding: 2px;
+  color: black;
+  background-color: #fff;
+}
 
-.user-stories li {
-  margin-bottom: 1em;
+ul {
+  list-style-type: none;
+  padding-left: 0;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+li {
+  /* margin-bottom: 0.5em; */
 }
 
 a {
   color: #2574a9;
 }
 
-form {
-  margin: 10px auto;
-  padding: 20px;
-  max-width: 600px;
-}
-
-label {
-  margin-right: 10px;
-}
-
-input {
-  padding: 5px;
-}
-
-input[type='text'] {
-  width: 220px;
-  text-align: center;
+button {
+  margin-top: 1rem;
 }
